<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.AlbumCreateFragment">

        <TextView
            android:id="@+id/createAlbumTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:paddingTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/create_new_album"
            android:textSize="30sp"
            android:textColor="@color/list_item_title_primary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="8dp"
            android:textColor="@color/list_item_title_primary"
            android:text="@string/title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:minHeight="48dp"
                android:inputType="text"
                android:backgroundTint="#FFFFFF"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/urlLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cover_image_url"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/list_item_title_primary"
            android:padding="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/urlInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/https">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/urlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:backgroundTint="#FFFFFF"
                android:padding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/releaseDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/list_item_title_primary"
            android:padding="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/releaseDateInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yyyy_mm_dd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/releaseDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:backgroundTint="#FFFFFF"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/list_item_title_primary"
            android:padding="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:backgroundTint="#FFFFFF"
                android:padding="8dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/genreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/list_item_title_primary"
            android:padding="8dp"/>

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/genre_items"/>

        <TextView
            android:id="@+id/recordLabelLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/list_item_title_primary"
            android:padding="8dp"/>

        <Spinner
            android:id="@+id/recordLabelSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/record_label_items"/>

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_album"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/TextGray"
            android:textSize="18sp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

    </LinearLayout>
</ScrollView>
