<resources>
    <string name="app_name">BackVynils</string>

    <string name="title_albums_menu">Albums</string>
    <string name="title_albums_list_fragment">My Albums</string>
    <string name="see_album_from_list_fragment">See Album Detail</string>

    <string name="title_artists_list_fragment">My Artists</string>
    <string name="title_collectors_list_menu">Collectors</string>
    <string name="title_collectors_list_fragment">My Collectors</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_album">Add Album</string>
    <string name="album_title_hint">Album title</string>
    <string name="cover_image_url_hint">https://</string>
    <string name="create_album_button_text">Create</string>
    <string name="create">Create</string>
    <string name="create_new_album">Create New Album</string>
    <string name="title">Title</string>
    <string name="https">https://</string>
    <string name="album_title">Album title</string>
    <string name="cover_image_url">Cover Image URL</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="release_date">Release Date</string>
    <string name="create_album">CREATE ALBUM</string>
    <string name="album_description">Album description</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="record_label">Record Label</string>
    <string name="add_track">Add Track</string>
    <string name="add_track_uppercase">ADD TRACK</string>
    <string name="duration">Duration</string>
    <string name="mm_ss">MM:SS</string>
    <string name="track_title">Track Title</string>
    <string name="track">Track</string>
    <string name="add_track_to_album">Add Track to Album</string>
    <string-array name="genre_items">
        <item>Choose a genre</item>
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="record_label_items">
        <item>Choose a record label</item>
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
    <string name="last_comment">Last Comment:</string>
    <string name="favorite_performer">Favorite Performance:</string>
    <string name="artist_detail_birthday">Birthday</string>
    <string name="album_detail_divider">|</string>
    <string name="artist_detail_cover_image">Artists’ cover image</string>
    <string name="menu_artist_option">Artists</string>
</resources>